objects/IS_Project_Checkin__c.object
<CustomObject>
    <fields>
        <fullName>Change_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>SFDC_Change_Request__c</referenceTo>
        <relationshipLabel>IS Project Checkins</relationshipLabel>
        <relationshipName>IS_Project_Checkins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checkin_Type__c</fullName>
        <label>Checkin Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accomplishments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Steps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocking Issues/Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Areas/Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes in Scope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IS_Project_Checkins</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IS Project Checkin</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Checkin Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IS Project Checkins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>